methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:9: error: '(' expected but identifier found.
      if isFacingTrail() {
         ^SlugHunting:21: error: illegal start of simple expression
    }
    ^